examples/generic/valid/01_simple_audio.sdp
v=0
o=- 3720000000 1 IN IP4 127.0.0.1
s=Simple Audio
t=0 0
m=audio 5004 RTP/AVP 0
c=IN IP4 224.0.0.1/64
a=rtpmap:0 PCMU/8000
